MyDevOrg/src/objects/Testing_time_sheet__c.object
<CustomObject>
    <fields>
        <fullName>Hours_worked__c</fullName>
        <label>Hours worked</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Case</label>
        <referenceTo>Test_Case__c</referenceTo>
        <relationshipLabel>Testing time sheet</relationshipLabel>
        <relationshipName>Testing_time_sheet</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Testing_time_sheet</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Timesheet_Date__c</fullName>
        <label>Timesheet Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Work_description__c</fullName>
        <label>Work description</label>
        <type>TextArea</type>
    </fields>
    <label>Testing time sheet</label>
    <nameField>
        <displayFormat>TTS{0000000}</displayFormat>
        <label>Testing time sheet ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Testing time sheet</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>